# Unreal

./: .env.example  .gitignore  DEPLOY.md  README.md  app.js  capacitor.config.json  config.js  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  server.js  server.py
.github/workflows/: build-apk.yml  deploy-pages.yml
unreal/: __init__.py  config.py
unreal/prompts/: __init__.py
unreal/resources/: __init__.py
unreal/tools/: __init__.py  automation.py
