[project]
name = "unreal"
version = "1.0.0"
description = "UNREAL — Ultimate AI System combining vision, voice, automation and code"
requires-python = ">=3.11"

dependencies = [
    # MCP & Voice pipeline
    "fastmcp>=0.1.0",
    "livekit-agents>=0.12.0",
    "livekit-plugins-google>=0.1.0",
    # "livekit-plugins-openai>=0.1.0",  # only needed if switching to OpenAI (paid)
    "livekit-plugins-sarvam>=0.1.0",
    "livekit-plugins-silero>=0.1.0",

    # LLM
    "google-genai>=0.1.0",

    # Automation (danyQe capabilities)
    "pyautogui>=0.9.54",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "pywhatkit>=5.4.0",
    "deep-translator>=1.11.0",
    "youtube-transcript-api>=0.6.0",
    "screen-brightness-control>=0.16.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",

    # Backend
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pymongo>=4.6.0",
    "supabase>=2.0.0",
]

[project.scripts]
unreal_server = "server:main"
unreal_voice  = "agent_unreal:dev"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
